--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Causal cognition
-description: PSYCH 291 @ Stanford, Spring 2019
+title: What makes a good explanation? Psychological and philosophical perspectives
+description: PSYCH 239 / PHIL 350 @ Stanford, Fall 2020
